--- a/rsvp-app/src/App.css
+++ b/rsvp-app/src/App.css
@@ -4,11 +4,16 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-bottom: 1px solid rgb(241, 133, 9);;
+ 
 }
 .events {
-  font-family: "Inconsolata", monospace;
   color: white;
+  font-family: "Merriweather", serif;
+  margin: 128px -7em 2px 0px;
+  
 }
+
 a:link {
   text-decoration: none;
   color: rgb(233, 231, 231);
@@ -48,9 +53,9 @@ header div {
   padding-left: 10px;
   border-bottom: 6px solid rgb(238, 204, 204);
 }
-.h2,
+
 h2 {
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 * {
@@ -114,7 +119,7 @@ input[type="submit"]:hover {
   clear: both;
 }
 
-/* Responsive layout - when the screen is less than 600px wide.*/
+ /* Responsive layout - when the screen is less than 600px wide */
 @media screen and (max-width: 600px) {
   .col-25,
   .col-75,
@@ -123,7 +128,11 @@ input[type="submit"]:hover {
     margin-top: 0;
   }
 }
-.details {
-  background-image:  url("https://cdn.pixabay.com/photo/2016/11/29/12/17/blur-1869429_960_720.jpg");
-  background-size: cover;
+
+
+.backButton {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+ margin: 50px 50px 28px 1192px;
+
+
 }
